# aagent-ccat

./: .dockerignore  .gitignore  CLAUDE.md  GIT_GUIDE.md  README.md  run_ingest.sh  run_ingest_fast.sh  start.md  start_backend.sh  test_cases_10.md
backend/: .env.example  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  knowledge_agent.py  memory.py  message.py  orchestrator.py  react_loop.py  recommendation_agent.py  reliability.py  retrieval_agent.py  shared_state.py  skill_registry.py  tools.py
backend/app/api/: admin.py  chat.py  docs.py  health.py  upload.py
backend/app/core/: observability.py  session.py  stream_manager.py  tenant_manager.py  tenant_middleware.py
backend/app/graph/: __init__.py  checkpointer.py  graph.py  llm.py  memory.py  nodes.py  slot_filling.py  state.py  tools.py
backend/app/memory/: __init__.py  preference_extraction.py  profile_store.py  user_profile.py
backend/app/routers/: profile.py
backend/tests/: conftest.py  test_api_integration.py  test_fast_path.py  test_icm.py  test_knowledge_agent.py  test_multi_agent_infra.py  test_recommendation_agent.py  test_retrieval_agent.py
docs/: Jianying001_Manual_1eb6d3ff.md  TD01_Manual.md  TD01_Safety.md  multi_tenant.md  test_doc_4dc4299d.txt  大模型配置指南.md  项目介绍.md
prompts/: ask_clarify.prompt  docs_generate.prompt  generate.prompt  intent_recognition.prompt  query_rewrite.prompt  reflection.prompt
rag/: db_client.py  embedding.py  hybrid_search.py  image_search.py  postprocessors.py  (+5 more)
(+157 files in other folders)
