[project]
name = "agent-backend"
version = "0.2.0"
description = "Agent backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
    "tenacity>=8.0.0",
    "circuitbreaker>=1.4.0",
    "oss2>=2.18.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "ragas>=0.4.0",
    "datasets>=2.15.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "locust>=2.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
testpaths = ["tests"]
asyncio_mode = "auto"